worked on data analysis, knn model with performance metrics, cross val, knn with the new 'k' value and metrics, some explanations

--- a/ProjectReport.ipynb
+++ b/ProjectReport.ipynb
@@ -54,8 +54,6 @@
     "- creates a visualization of the analysis \n",
     "- note: all tables and figure should have a figure/table number and a legend\n",
     "\n",
-    "Please refer to the Code.ipynb file.  \n",
-    "Note. the numbers do not correlate.\n",
     "\n",
     "==========================================================================================================================\n",
     "\n",
@@ -73,19 +71,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: altair==5.0.0rc1 in /opt/conda/lib/python3.10/site-packages (5.0.0rc1)\n",
+      "Collecting altair==5.0.0rc1\n",
+      "  Using cached altair-5.0.0rc1-py3-none-any.whl (709 kB)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.23.5)\n",
       "Requirement already satisfied: typing-extensions>=4.0.1 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.4.0)\n",
       "Requirement already satisfied: jsonschema>=3.0 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (4.17.3)\n",
-      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (3.1.2)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.23.5)\n",
       "Requirement already satisfied: toolz in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (0.12.0)\n",
       "Requirement already satisfied: pandas>=0.18 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (1.5.2)\n",
+      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.10/site-packages (from altair==5.0.0rc1) (3.1.2)\n",
       "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (0.19.3)\n",
       "Requirement already satisfied: attrs>=17.4.0 in /opt/conda/lib/python3.10/site-packages (from jsonschema>=3.0->altair==5.0.0rc1) (22.2.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.18->altair==5.0.0rc1) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.18->altair==5.0.0rc1) (2022.7)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.10/site-packages (from jinja2->altair==5.0.0rc1) (2.1.1)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas>=0.18->altair==5.0.0rc1) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas>=0.18->altair==5.0.0rc1) (1.16.0)\n",
+      "Installing collected packages: altair\n",
+      "  Attempting uninstall: altair\n",
+      "    Found existing installation: altair 4.2.0\n",
+      "    Uninstalling altair-4.2.0:\n",
+      "      Successfully uninstalled altair-4.2.0\n",
+      "Successfully installed altair-5.0.0rc1\n"
      ]
     }
    ],
@@ -104,11 +109,6 @@
     "    RandomizedSearchCV\n",
     ")\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
     "\n",
     "! pip install altair==5.0.0rc1 \n",
     "import altair as alt"
@@ -734,13 +734,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-655d0606d25d4819a012c6d29660abde\"></div>\n",
+       "<div id=\"altair-viz-b203b7878a02448c92ecceea6e821169\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-655d0606d25d4819a012c6d29660abde\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-655d0606d25d4819a012c6d29660abde\");\n",
+       "    if (outputDiv.id !== \"altair-viz-b203b7878a02448c92ecceea6e821169\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-b203b7878a02448c92ecceea6e821169\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -839,13 +839,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-bcbdb365df7c45298d3d9ecba755d9db\"></div>\n",
+       "<div id=\"altair-viz-6cf5489782c440689236242deae1e357\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-bcbdb365df7c45298d3d9ecba755d9db\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-bcbdb365df7c45298d3d9ecba755d9db\");\n",
+       "    if (outputDiv.id !== \"altair-viz-6cf5489782c440689236242deae1e357\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-6cf5489782c440689236242deae1e357\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -975,13 +975,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-144a313c5cb7420393116b7852b5fa53\"></div>\n",
+       "<div id=\"altair-viz-d2f728ea418b4b9bb0612f8d61766ad4\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-144a313c5cb7420393116b7852b5fa53\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-144a313c5cb7420393116b7852b5fa53\");\n",
+       "    if (outputDiv.id !== \"altair-viz-d2f728ea418b4b9bb0612f8d61766ad4\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-d2f728ea418b4b9bb0612f8d61766ad4\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,11 +1122,15 @@
     "]\n",
     "\n",
     "\n",
-    "# concatenated wine data\n",
     "ct = make_column_transformer(\n",
     "    (StandardScaler(), features_numerical),\n",
-    "    (OneHotEncoder(drop=\"first\"), features_categorical)\n",
+    "    (OneHotEncoder(), features_categorical)\n",
     ")\n",
+    "\n",
+    "\n",
+    "X_train_knn = ct.fit_transform(X_train_raw)\n",
+    "X_test_knn = ct.transform(X_test_raw)\n",
+    "\n",
     "X_train = ct.fit_transform(X_train_raw)\n",
     "\n",
     "# red and white wine data\n",
@@ -1158,28 +1162,150 @@
     "\n",
     "* To answer this question, we decided to use five different machine learning models to predict wine quality based on the chemical properties of the wine. **We decided to do this after reading about a similar analysis done by NEED THE CITATION\n",
     "\n",
-    "**this is where I left off, I'll keep working on it sat**"
+    "**this is where I left off, I'll keep working on it sat**\n",
+    "\n",
+    "The main question we sought to answer was: \"What are the most important factors affecting wine quality?\" To answer this question, we used a machine learning model to predict wine quality based on the chemical properties of the wine.\n",
+    "\n",
+    "We chose KNN because it is a simple and effective algorithm for classification and regression tasks. KNN is also non-parametric, meaning it makes no assumptions about the distribution of the data. Linear Regression is also a good choice because it is a simple and widely used algorithm for regression tasks. Linear Regression is also interpretable and can provide insight into which features are important in predicting wine quality.\n",
+    "\n",
+    "Below, we have performed KNN with k=5 and computed the score of the model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5532307692307692\n",
+      "Precision: 0.5386483519759355\n",
+      "Recall: 0.5532307692307692\n",
+      "F1-score: 0.5407150215750098\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "# predict labels for testing data\n",
+    "y_pred = knn.predict(X_test)\n",
+    "\n",
+    "# evaluate performance of KNN classification model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred, average='weighted')\n",
+    "recall = recall_score(y_test, y_pred, average='weighted')\n",
+    "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1-score:\", f1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We believe that there will be a better k (hyperparameter) for our model so we will do hyperparameter optimization for KNN using GridSearchCV to find the optimal value of k (the number of neighbors to consider). We also used 5 cv which means 5-fold cross-validation and we are trying all values between 1 and 30 for the number of neighbors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameter:  {'n_neighbors': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define parameter grid\n",
+    "param_grid = {'n_neighbors': range(1, 30)}\n",
     "\n",
-    "4. Data Analysis:\n",
-    "    The main question we sought to answer was: \"What are the most important factors affecting wine quality?\" To answer this question, we used a machine learning model to predict wine quality based on the chemical properties of the wine.\n",
-    "    \n",
-    "The following steps were taken:\n",
+    "# instantiate KNN classifier\n",
+    "knn = KNeighborsClassifier()\n",
     "\n",
-    "- The dataset was split into training and testing sets using the train_test_split() function from sklearn.model_selection.\n",
-    "- A OneHotEncoder was used to transform the 'type' column to a numerical format.\n",
-    "- A ColumnTransformer was used to apply the encoder to the training data.\n",
-    "- A RandomForestRegressor model was trained on the training data.\n",
-    "- The trained model was used to predict wine quality for the testing data.\n",
-    "- The predictions were evaluated using the mean squared error (MSE) and R-squared values.\n",
+    "# instantiate GridSearchCV\n",
+    "grid_knn = GridSearchCV(knn, param_grid=param_grid, cv=5)\n",
+    "\n",
+    "# fit GridSearchCV to training data\n",
+    "grid_knn.fit(X_train_knn, y_train)\n",
+    "\n",
+    "# print best parameter \n",
+    "print(\"Best parameter: \", grid_knn.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the best 'k' (the hyperparameter) seems to be 1 for our model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, we have used the best/most optimal k (1 for our model) and computed the accuracy score of it, as well as precision, recall and f1 scores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)\n",
+    "knn.fit(X_train_knn, y_train)\n",
+    "\n",
+    "# predict labels for testing data\n",
+    "y_pred = knn.predict(X_test_knn)\n",
+    "\n",
+    "# evaluate performance of KNN classification model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred, average='weighted')\n",
+    "recall = recall_score(y_test, y_pred, average='weighted')\n",
+    "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The score results show that our new 'k' value of 1 is better than our old 'k' value of 5 so the tuning was a success and we now have a better model score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We evaluated the models using accuracy as the metric to evaluate the model. Accuracy is a commonly used metric for classification problems, and it measures the proportion of correctly classified observations out of the total number of observations.  This metric is suitable for balanced datasets where the number of instances in each class is similar. We have included other metrics such as precision, recall, and F1-score in our computation along with the Accuracy score for extra work.\n",
     "\n",
     "\n",
-    "(ToDo): summary of dataset, visualization of dataset, visulization of analysis "
+    "For predictors variables, we will use all the available predictors to train the model. There are 11 numerical predictors, such as fixed acidity, volatile acidity, citric acid, residual sugar, etc., and 1 categorical predictor, type (which is either red or white). StandardScaler is used to standardize the numerical features, and OneHotEncoder is used to encode the categorical variable. Standardization is important for KNN as it calculates the distance between observations, and if the variables are on different scales, the distances might not be meaningful. OneHotEncoder is used to convert the categorical variable into a numerical format that can be used in the model. The \"drop='first'\" argument is used to avoid the dummy variable trap, where the columns of the encoded variables are linearly dependent. Finally, make_column_transformer is used to apply these transformations to the appropriate subsets of the data."
    ]
   },
   {
