got rid of resampling
also stored resampling in code file

--- a/Code.ipynb
+++ b/Code.ipynb
@@ -965,6 +965,194 @@
     "plot_white = get_plots(models_all_white)\n",
     "plot_white"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a89d1af1-74dc-4915-9c70-a4f0988e51bd",
+   "metadata": {},
+   "source": [
+    "**STORING RESAMPLING ATTEMPT HERE**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e054e6c6-d1b9-45d7-9ddf-7118e2b8b4ac",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# # splits for concatenated wine data\n",
+    "# train_raw, test_raw = train_test_split(data_wine, test_size=0.25, random_state=123)\n",
+    "\n",
+    "# # splits for red wine data\n",
+    "# train_red_raw, test_red = train_test_split(data_red, test_size=0.25, random_state=123)\n",
+    "\n",
+    "# #splits for white wine data\n",
+    "# train_white_raw, test_white = train_test_split(data_white, test_size=0.25, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d68c12f-89bf-4f46-b272-5aecd8fabd31",
+   "metadata": {},
+   "source": [
+    "* Before we begin the rest of the preprocessing we must first deal with our problem of an unbalanced dataset by resampling it. We know from *Graph 1* that our dataset is heavily biased toward a quality classification of 5 or 6, hence the need to resample it. While this may not be statistically sound, this is the method we learned in class for dealing with unbalanced data. By using resampling, we can give more weight to the more rare classifications of wine quality.\n",
+    "* We know that our full dataset contains quality classifications from 3 to 9 from our previous summary of data. To fully understand this range, we count the number of each classification in our 3 datasets: Concatenated Wine, Red Wine, and White Wine. \n",
+    "* Note that this resampling will be preformed only on training data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b2d5845a-a31f-4653-b324-3615b0c81c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# qualities = pd.DataFrame({\"quality\": [i for i in range (1,11)]})\n",
+    "\n",
+    "# all_count = [0 for i in range(10)]\n",
+    "# r_count = [0 for i in range(10)]\n",
+    "# w_count = [0 for i in range(10)]\n",
+    "\n",
+    "# for i in range(0,10):\n",
+    "#     try:\n",
+    "#         all_count[i] = train_raw[\"quality\"].value_counts()[i+1]\n",
+    "#     except:\n",
+    "#         None\n",
+    "#     try:\n",
+    "#         r_count[i] = train_red_raw[\"quality\"].value_counts()[i+1]\n",
+    "#     except:\n",
+    "#         None\n",
+    "#     try:\n",
+    "#         w_count[i] = train_white_raw[\"quality\"].value_counts()[i+1]\n",
+    "#     except:\n",
+    "#         None\n",
+    "    \n",
+    "# qualities[\"Concatenated Wine\"] = all_count\n",
+    "# qualities[\"Red Wine\"] = r_count\n",
+    "# qualities[\"White Wine\"] = w_count\n",
+    "# qualities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68ecc4b-e65c-40f3-a015-8cf336978719",
+   "metadata": {},
+   "source": [
+    "*Table: 3*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fd1220e-fa66-46d3-a537-35d1a6d5e3c0",
+   "metadata": {},
+   "source": [
+    "* We see from *Table 3* that for each dataframe, the maximum count for a quality classification is **2125**, **508**, and **1624** respectively. We will use these max counts to resample the 3 datasets by filtering for each quality, resampling them one by one, then concating each dataset back together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "423572ec-26b7-4fea-8c5f-1a6b2685c454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all_max = max(all_count)\n",
+    "# r_max = max(r_count)\n",
+    "# w_max = max(w_count)\n",
+    "\n",
+    "# def resample_df(df, max_c, count):\n",
+    "#     resampled = []\n",
+    "#     for i in range(1,11):\n",
+    "#         if count[i-1] != 0 and count[i-1] != max_c:\n",
+    "#             matching = df[df[\"quality\"] == i]\n",
+    "#             matching_upsample = resample(matching, n_samples=max_c, random_state=123)\n",
+    "#             resampled.append(matching_upsample)\n",
+    "#         elif count[i-1] == max_c:\n",
+    "#             matching = df[df[\"quality\"] == i]\n",
+    "#             resampled.append(matching)\n",
+    "            \n",
+    "#     resampled_df = pd.concat([*resampled])\n",
+    "#     return resampled_df\n",
+    "\n",
+    "# train_raw = resample_df(train_raw, all_max, all_count) \n",
+    "# train_red_raw = resample_df(train_red_raw, r_max, r_count) \n",
+    "# train_white_raw = resample_df(train_white_raw, w_max, w_count) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b8f962d-6918-415f-93b5-f17ab456688b",
+   "metadata": {},
+   "source": [
+    "* Now that our data has been resampled, lets see what our counts look like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28851365-37d1-4125-b6ed-fecc2ed4641a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# qualities_new = pd.DataFrame({\"quality\": [i for i in range (1,11)]})\n",
+    "\n",
+    "# all_count_new = [0 for i in range(10)]\n",
+    "# r_count_new = [0 for i in range(10)]\n",
+    "# w_count_new = [0 for i in range(10)]\n",
+    "\n",
+    "# for i in range(0,10):\n",
+    "#     try:\n",
+    "#         all_count_new[i] = train_raw[\"quality\"].value_counts()[i+1]\n",
+    "#     except:\n",
+    "#         None\n",
+    "#     try:\n",
+    "#         r_count_new[i] = train_red_raw[\"quality\"].value_counts()[i+1]\n",
+    "#     except:\n",
+    "#         None\n",
+    "#     try:\n",
+    "#         w_count_new[i] = train_white_raw[\"quality\"].value_counts()[i+1]\n",
+    "#     except:\n",
+    "#         None\n",
+    "    \n",
+    "# qualities_new[\"Concatenated Wine\"] = all_count_new\n",
+    "# qualities_new[\"Red Wine\"] = r_count_new\n",
+    "# qualities_new[\"White Wine\"] = w_count_new\n",
+    "# qualities_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3b799e03-8b2e-4b22-8e32-fbebc8d64f41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Concatenated Wine\n",
+    "# X_train_raw = train_raw.drop('quality', axis=1)\n",
+    "# y_train = train_raw['quality']\n",
+    "\n",
+    "# X_test_raw = test_raw.drop('quality', axis=1)\n",
+    "# y_test = test_raw['quality']\n",
+    "\n",
+    "\n",
+    "# # Red Wine\n",
+    "# X_train_red_raw = train_red_raw.drop(['quality', 'type'], axis=1)\n",
+    "# y_train_red = train_red_raw['quality']\n",
+    "\n",
+    "# X_test_red = test_red.drop(['quality', 'type'], axis=1)\n",
+    "# y_test_red = test_red['quality']\n",
+    "\n",
+    "\n",
+    "# # White Wine\n",
+    "# X_train_white_raw = train_white_raw.drop(['quality', 'type'], axis=1)\n",
+    "# y_train_white = train_white_raw['quality']\n",
+    "\n",
+    "# X_test_white = test_white.drop(['quality', 'type'], axis=1)\n",
+    "# y_test_white = test_white['quality']"
+   ]
   }
  ],
  "metadata": {
